# libniirs

./: .gitignore  CBlurMetrics.cpp  CBlurMetrics.h  CMakeLists.txt  Thumbs.db  cniirsmetric.cpp  cniirsmetric.h  cviniirsmetric.cpp  cvniirsmetric.h  libniirs.cpp  libniirs.h  libniirs.sln  libniirs.vcxproj  libniirs.vcxproj.filters  main.cpp  main.cpp.1  niirsmetric.cpp  niirsmetric.h  viniirsmetric.cpp  vniirsmetric.h
data/: Thumbs.db
